--- a/img/startpage.html
+++ b/img/startpage.html
@@ -60,7 +60,7 @@ p {
 		<ul><li>Qt Webkit browser</li>
 		<li>Fujitsu ATLAS translation engine interface</li>
 		<li>Nifty and Google online translation</li>
-		<li>Nepomuk GUI frontend</li></ul>
+        <li>Nepomuk and Recoll GUI frontend</li></ul>
 	</div>
 	</div>
 	
