Dictionary window, globalcontrol header optimization.

--- a/data/startpage.html
+++ b/data/startpage.html
@@ -53,7 +53,7 @@ p {
     <p>JPReader</p>
 	<div class="framediv">
 	<div class="icondiv">
-		<img src="qrc:/globe128"/>
+        <img src="qrc:/img/globe128"/>
 	</div>
 	<div class="textdiv">
 		<p>Special enhanced browser for searching and reading japanese text.</p>
