--- a/data/startpage.html
+++ b/data/startpage.html
@@ -60,7 +60,7 @@ p {
 		<ul><li>Qt Webkit browser</li>
 		<li>Fujitsu ATLAS translation engine interface</li>
 		<li>Nifty and Google online translation</li>
-        <li>Nepomuk, Recoll and Baloo GUI frontend</li></ul>
+        <li>Recoll and Baloo GUI frontend</li></ul>
 	</div>
 	</div>
 	
