Removed glib and gobject from dependencies, fixed article loading in dictionary, fixed compilation error while all indexer services (recoll and baloo) is unavailable, removed Force new tab settings item, cleaned old commented code.

--- a/data/startpage.html
+++ b/data/startpage.html
@@ -57,9 +57,9 @@ p {
 	</div>
 	<div class="textdiv">
 		<p>Special enhanced browser for searching and reading japanese text.</p>
-		<ul><li>Qt Webkit browser</li>
+        <ul><li>Qt WebEngine browser</li>
 		<li>Fujitsu ATLAS translation engine interface</li>
-		<li>Nifty and Google online translation</li>
+        <li>Google online translation</li>
         <li>Recoll and Baloo GUI frontend</li></ul>
 	</div>
 	</div>
