Hosting/SCP translator method removed.

--- a/data/startpage.html
+++ b/data/startpage.html
@@ -59,7 +59,7 @@ p {
 		<p>Special enhanced browser for searching and reading japanese text.</p>
         <ul><li>Qt WebEngine browser</li>
 		<li>Fujitsu ATLAS translation engine interface</li>
-        <li>Google online translation</li>
+        <li>Google, Bing, Yandex online translation API</li>
         <li>Recoll and Baloo GUI frontend</li></ul>
 	</div>
 	</div>
