--- a/data/startpage.html
+++ b/data/startpage.html
@@ -56,10 +56,10 @@ p {
         <img src="qrc:/img/globe128"/>
 	</div>
 	<div class="textdiv">
-        <p>Special enhanced browser for searching and reading text.</p>
+        <p>Special enhanced browser for translating, searching and reading assistance.</p>
         <ul><li>Qt WebEngine browser</li>
 		<li>Fujitsu ATLAS translation engine interface</li>
-        <li>Google, Bing, Yandex, AWS online translation API</li>
+        <li>Google, Bing, Yandex, AWS, GCP, AliCloud online translation API</li>
         <li>Recoll and Baloo GUI frontend</li></ul>
 	</div>
 	</div>
