Start page updated with OpenAI.

--- a/data/startpage.html
+++ b/data/startpage.html
@@ -59,7 +59,7 @@ p {
         <p>Special enhanced browser for translating, searching and reading assistance.</p>
         <ul><li>Qt WebEngine browser</li>
 		<li>Fujitsu ATLAS translation engine interface</li>
-        <li>Google, Bing, Yandex, AWS, GCP, AliCloud, PROMT, DeepL online translation API</li>
+        <li>Google, Bing, Yandex, AWS, GCP, AliCloud, PROMT, DeepL, OpenAI online translation API</li>
         <li>Recoll and Baloo GUI frontend</li></ul>
 	</div>
 	</div>
